--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
         "react": "^19.0.0",
         "react-day-picker": "^9.11.1",
         "react-dom": "^19.0.0",
+        "recharts": "^2.15.4",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
+        "vaul": "^1.1.2",
         "vite": "^7.0.4"
     },
     "optionalDependencies": {
