--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.19",
+        "@fullcalendar/daygrid": "^6.1.19",
+        "@fullcalendar/interaction": "^6.1.19",
+        "@fullcalendar/react": "^6.1.19",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.1.4",
         "@radix-ui/react-accordion": "^1.2.12",
